change file for IDE

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,17 +1,21 @@
+<!<!doctype html>
 <html>
-	<head>
-		<script src="Scripts/modules/XMLsync.js"></script>
-		<script src="Scripts/modules/dynamicpage.js"></script>
-		<script src="Scripts/modules/localforage.js"></script>
-		<script src="Scripts/modules/RCJS_API.js"></script>
-		<script src="Scripts/ClientAPI.js"></script>
-		<script src="Scripts/data.js"></script>
-		<script src="Scripts/BattleAPI.js"></script>
-		<script src="Scripts/BSAPI.js"></script>
-		<script class="dynamic_script">
-			window.addEventListener("load", function() {change_page("")});
-		</script>
-	</head>
-	<body>
-	</body>
+    <head>
+        <title>Utopia</title>
+        <script src="Scripts/modules/XMLsync.js"></script>
+        <script src="Scripts/modules/dynamicpage.js"></script>
+        <script src="Scripts/modules/localforage.js"></script>
+        <script src="Scripts/modules/RCJS_API.js"></script>
+        <script src="Scripts/ClientAPI.js"></script>
+        <script src="Scripts/data.js"></script>
+        <script src="Scripts/BattleAPI.js"></script>
+        <script src="Scripts/BSAPI.js"></script>
+        <script class="dynamic_script">
+                    window.addEventListener("load", function () {
+                        change_page("");
+                    });
+        </script>
+    </head>
+    <body>
+    </body>
 </html>
