--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,4 +1,4 @@
-<!<!doctype html>
+<!doctype html>
 <html>
     <head>
         <title>Utopia</title>
@@ -15,6 +15,14 @@
                         change_page("");
                     });
         </script>
+        <style>
+            body {
+                bottom: 0;
+                left: 0;
+                right: 0;
+                top: 0;
+            }
+        </style>
     </head>
     <body>
     </body>
