--- a/public_html/index.html
+++ b/public_html/index.html
@@ -21,6 +21,9 @@
                 left: 0;
                 right: 0;
                 top: 0;
+                margin: 0;
+                border: 0;
+                padding: 0;
             }
         </style>
     </head>
