Add principale Battle

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -11,8 +11,9 @@
     <script src="Scripts/data.js"></script>
     <script src="Scripts/BattleAPI.js"></script>
     <script src="Scripts/BSAPI.js"></script>
+    <script src="Scripts/PBattle.js"></script>
     <script class="dynamic_script">
-        window.addEventListener("load", function () {
+        window.addEventListener("load", function() {
             change_page("");
         });
     </script>
