Update Utopia.json, index.html, and 4 more files...

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -15,6 +15,10 @@
     <script class="dynamic_script">
         window.addEventListener("load", function() {
             change_page("");
+            localforage = localforage.createInstance({
+                name: "Utopia",
+                storeName: "Utopia"
+            });
         });
     </script>
     <style>
